{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 39,
  "lineage": "9295f127-c34e-938e-9288-b29a52826bfc",
  "resources": [
    {
      "module": "module.skillup_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "skillup_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:loadbalancer/app/skillup-alb-mbalilo-001/284a645cf29feb4a",
            "arn_suffix": "app/skillup-alb-mbalilo-001/284a645cf29feb4a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "skillup-alb-mbalilo-001-1063525293.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:loadbalancer/app/skillup-alb-mbalilo-001/284a645cf29feb4a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skillup-alb-mbalilo-001",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03a793d7d970c136a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04339b12d7154ff7a"
              },
              {
                "subnet_id": "subnet-0fe896a27771be5d5"
              }
            ],
            "subnets": [
              "subnet-04339b12d7154ff7a",
              "subnet-0fe896a27771be5d5"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0da95f3898de25c67",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.skillup_alb.aws_security_group.alb_sg",
            "module.skillup_alb.data.http.myip",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1za",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1zb",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "skillup_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:listener/app/skillup-alb-mbalilo-001/284a645cf29feb4a/e06f8a30ac8ffd14",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:targetgroup/skillup-tg-asg-mbalilo-001/1a1e4fe77d803117",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:listener/app/skillup-alb-mbalilo-001/284a645cf29feb4a/e06f8a30ac8ffd14",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:loadbalancer/app/skillup-alb-mbalilo-001/284a645cf29feb4a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_alb.aws_lb.skillup_alb",
            "module.skillup_alb.aws_lb_target_group.skillup_web_tg",
            "module.skillup_alb.aws_security_group.alb_sg",
            "module.skillup_alb.data.http.myip",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1za",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1zb",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "skillup_web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:targetgroup/skillup-tg-asg-mbalilo-001/1a1e4fe77d803117",
            "arn_suffix": "targetgroup/skillup-tg-asg-mbalilo-001/1a1e4fe77d803117",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:697520799379:targetgroup/skillup-tg-asg-mbalilo-001/1a1e4fe77d803117",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "skillup-tg-asg-mbalilo-001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:security-group/sg-03a793d7d970c136a",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a793d7d970c136a",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.158.57.196/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-alb-sg-m.balilo-002",
            "name_prefix": "",
            "owner_id": "697520799379",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-alb-sg-m.balilo-002"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-alb-sg-m.balilo-002"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_alb.data.http.myip",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:security-group/sg-0738b0b249089f038",
            "description": "Security Group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0738b0b249089f038",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6522,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c585151220899ee8"
                ],
                "self": false,
                "to_port": 6522
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a793d7d970c136a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-asg-sg-m.balilo-003",
            "name_prefix": "",
            "owner_id": "697520799379",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-asg-sg-m.balilo-003"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-asg-sg-m.balilo-003"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_alb.aws_security_group.alb_sg",
            "module.skillup_alb.data.http.myip",
            "module.skillup_bastion.aws_security_group.bastion_sg",
            "module.skillup_bastion.data.http.myip",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029dbfb3ca4c8a7bd",
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:instance/i-092d1a67e2749df70",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm",
            "id": "i-092d1a67e2749df70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skillup-keypair_bastion-m.balilo-001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03625e33d8c5f3a63",
            "private_dns": "ip-10-0-4-44.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.44",
            "public_dns": "ec2-3-27-212-230.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.27.212.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0928dba2a1c5b658f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe896a27771be5d5",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-ec2-bastion-m.balilo-001",
              "Owner": "m.balilo",
              "Project": "COT-CNF",
              "Team": "SRE1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-ec2-bastion-m.balilo-001",
              "Owner": "m.balilo",
              "Project": "COT-CNF",
              "Team": "SRE1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c585151220899ee8"
            ]
          },
          "dependencies": [
            "module.skillup_bastion.aws_key_pair.bastion_keypair",
            "module.skillup_bastion.aws_security_group.bastion_sg",
            "module.skillup_bastion.data.aws_ami.amazon_linux",
            "module.skillup_bastion.data.http.myip",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1za",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:security-group/sg-0c585151220899ee8",
            "description": "Allow traffic for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c585151220899ee8",
            "ingress": [
              {
                "cidr_blocks": [
                  "136.158.57.196/32"
                ],
                "description": "Allow traffic on port 22 from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "skillup-bastion_sg-m.balilo-001",
            "name_prefix": "",
            "owner_id": "697520799379",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-bastion-sg-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-bastion-sg-m.balilo-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_bastion.data.http.myip",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0ec68e08cd003ca",
            "association_id": "eipassoc-017433dddb1eb3e07",
            "domain": "vpc",
            "id": "eipalloc-0c0ec68e08cd003ca",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0c827579a17c31598",
            "private_dns": "ip-10-0-7-235.ap-southeast-2.compute.internal",
            "private_ip": "10.0.7.235",
            "public_dns": "ec2-52-65-165-212.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.165.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-eip-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-eip-m.balilo-001"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "skillup_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:internet-gateway/igw-0729a98d8caa951ee",
            "id": "igw-0729a98d8caa951ee",
            "owner_id": "697520799379",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-igw-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-igw-m.balilo-001"
            },
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "skillup_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0ec68e08cd003ca",
            "association_id": "eipassoc-017433dddb1eb3e07",
            "connectivity_type": "public",
            "id": "nat-0600c939a72dc3bb6",
            "network_interface_id": "eni-0c827579a17c31598",
            "private_ip": "10.0.7.235",
            "public_ip": "52.65.165.212",
            "subnet_id": "subnet-0fe896a27771be5d5",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-nat-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-nat-m.balilo-001"
            }
          },
          "dependencies": [
            "module.skillup_vpc.aws_eip.eip_nat",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1za",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0729a98d8caa951ee",
            "id": "r-rtb-0efb5687c388f48311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0efb5687c388f4831",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_vpc.aws_internet_gateway.skillup_internet_gateway",
            "module.skillup_vpc.aws_route_table.skillup_public_route",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070c088f4a79329b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0600c939a72dc3bb6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070c088f4a79329b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_vpc.aws_nat_gateway.skillup_nat",
            "module.skillup_vpc.aws_route_table.skillup_private_route"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skillup_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:route-table/rtb-070c088f4a79329b4",
            "id": "rtb-070c088f4a79329b4",
            "owner_id": "697520799379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0600c939a72dc3bb6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-rt-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-rt-m.balilo-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skillup_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:route-table/rtb-0efb5687c388f4831",
            "id": "rtb-0efb5687c388f4831",
            "owner_id": "697520799379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0729a98d8caa951ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-rt-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-rt-m.balilo-001"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "skillup_rt_assoc_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb5a8881a9e58d89",
            "route_table_id": "rtb-070c088f4a79329b4",
            "subnet_id": "subnet-003b0e82c7ddbfabf"
          },
          "dependencies": [
            "module.skillup_vpc.aws_route_table.skillup_private_route",
            "module.skillup_vpc.aws_subnet.skillup_private_subnet_1za",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "skillup_rt_assoc_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6160eff84581ff",
            "route_table_id": "rtb-070c088f4a79329b4",
            "subnet_id": "subnet-05a274ae4624fd817"
          },
          "dependencies": [
            "module.skillup_vpc.aws_route_table.skillup_private_route",
            "module.skillup_vpc.aws_subnet.skillup_private_subnet_1zb",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "skillup_rt_assoc_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f8d5cec2d3fa741",
            "route_table_id": "rtb-0efb5687c388f4831",
            "subnet_id": "subnet-0fe896a27771be5d5"
          },
          "dependencies": [
            "module.skillup_vpc.aws_route_table.skillup_public_route",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1za",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "skillup_rt_assoc_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fae36874c814b6b9",
            "route_table_id": "rtb-0efb5687c388f4831",
            "subnet_id": "subnet-04339b12d7154ff7a"
          },
          "dependencies": [
            "module.skillup_vpc.aws_route_table.skillup_public_route",
            "module.skillup_vpc.aws_subnet.skillup_public_subnet_1zb",
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skillup_private_subnet_1za",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:subnet/subnet-003b0e82c7ddbfabf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003b0e82c7ddbfabf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697520799379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-subnet-a-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-subnet-a-m.balilo-001"
            },
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skillup_private_subnet_1zb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:subnet/subnet-05a274ae4624fd817",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a274ae4624fd817",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697520799379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-subnet-b-m.balilo-002"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-private-subnet-b-m.balilo-002"
            },
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skillup_public_subnet_1za",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:subnet/subnet-0fe896a27771be5d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe896a27771be5d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697520799379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-subnet-a-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-subnet-a-m.balilo-001"
            },
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skillup_public_subnet_1zb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:subnet/subnet-04339b12d7154ff7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04339b12d7154ff7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697520799379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-subnet-b-m.balilo-002"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-public-subnet-b-m.balilo-002"
            },
            "vpc_id": "vpc-0da95f3898de25c67"
          },
          "dependencies": [
            "module.skillup_vpc.aws_vpc.skillup_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.skillup_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skillup_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:697520799379:vpc/vpc-0da95f3898de25c67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e2b99293afa2f3d",
            "default_route_table_id": "rtb-02ea289fbd2d8679b",
            "default_security_group_id": "sg-0000274ecd743fa54",
            "dhcp_options_id": "dopt-ca9c92ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da95f3898de25c67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ea289fbd2d8679b",
            "owner_id": "697520799379",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-vpc-m.balilo-001"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-vpc-m.balilo-001"
            }
          }
        }
      ]
    }
  ]
}